# measurebot

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  build_package.py  pyproject.toml  setup.py  ups_monitor.example.json
measurebot/: __init__.py  alerts.py  ups.py  ups_monitor.py
